methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:42: error: not found: value makeScheme
    makeScheme()
    ^